# Bf3090bot

./: .env.example  .gitignore  .gitmodules  LICENSE  README.en.md  README.md  __init__.py  apiproxy.py  bf1.py  bf1draw.py  bf1draw2.py  bf1helper.py  bf1rsp.py  bf2042.py  bfv.py  bot.py  config.py  cron.py  cron_stat.py  db_migration.py  getGatewaySession.ipynb  grouprsp.py  image.py  pyproject.toml  rdb.py  redis_helper.py  requirements.txt  secret.json.example  secret.py  sqlite2alchemy.py  template.py  utils.py
apiproxy/: apiproxy.py  apiproxy.service  btr.pyi  start-apiproxy.sh
assets/: README.md
bf1core/: __init__.py  grouprsp.py  help.py  info.py  matcher.py  rsp.py  rspvip.py  scheduler.py  serverbind.py  serverlog.py  stat.py
bf3090bot/: __init__.py  bf1draw.py  bf1draw2.py  bf1helper.py  bf1rsp.py  config.py  image.py  rdb.py  redis_helper.py  secret.pyi  utils.py
bf3090bot/assets/: README.md  adminhelp.md
bf3090bot/bf1core/: __init__.py  grouprsp.py  help.py  info.py  matcher.py  rsp.py  rspvip.py  scheduler.py  serverbind.py  serverlog.py  stat.py
cronlib/: api.py  cron_secret.pyi  db.py  utils.py
kookbot/: create_db.sql  main.py  secret.py.template
scripts/: db_migration.py  db_vip_migration_20240107.py
socketlib/: client.py  server.py
